--- a/Public/html/chatPage.html
+++ b/Public/html/chatPage.html
@@ -45,7 +45,7 @@
                     <a class="nav-item nav-link active" href="#" id="link">Home <span
                             class="sr-only">(current)</span></a>
                     <a class="nav-item nav-link" href="#" id="link">Features</a>
-                    <a class="nav-item nav-link" href="#" id="link">Log Out</a>
+                    <a class="nav-item nav-link" href="../index.html" id="link">Log Out</a>
                 </div>
             </div>
         </nav>
@@ -96,7 +96,7 @@
 
                     </li>
                     <li>
-                        <a href="addFriends.htmls"><i class="fas fa-user-plus user"></i> <span>Add Friend</span> </a>
+                        <a href="addFriends.html"><i class="fas fa-user-plus user"></i> <span>Add Friend</span> </a>
 
                     </li>
                 </ul>
