--- a/Public/html/friends.html
+++ b/Public/html/friends.html
@@ -180,17 +180,49 @@
                             res.forEach(element => {
                                 $("#friendList").append(`<li
                                     class="list-group-item d-flex justify-content-between align-items-center">
-                                    <a href="#" class="chats" onclick="showProfile(${element.id})"><img
+                                    <a href="#" class="chats" onclick="showProfile(${element.friendId})"><img
                                             src="../img/login_icon.png" alt="..."
                                             class="profile-img">${element.name}</a>
 
-                                    <a href="chatPage.html"><span class="badge"><i class="far fa-comment-alt"></i>
+                                    <a href="#" onclick="addToChats(${element.friendId})"><span class="badge"><i class="far fa-comment-alt"></i>
                                         </span></a>
                                     <a href=""><span class="badge"> <i class="fas fa-trash"></i> </span></a>
                                 </li>`)
                             });
                         }
                     })
+
+                $.ajax({
+                        method: "GET",
+                        url: `http://localhost:3000/friends?friendId=${userDetails.id}`
+                    })
+                    .done(function (res) {
+                        if (res.length) {
+                            $(".empty").hide()
+                            res.forEach(element => {
+                                $.ajax({
+                                        method: "GET",
+                                        url: `http://localhost:3000/users/${element.userId}`
+                                    })
+                                    .done(function (result) {
+                                        $("#friendList").append(`<li
+                                             class="list-group-item d-flex justify-content-between align-items-center">
+                                             <a href="#" class="chats" onclick="showProfile(${result.id})"><img
+                                                     src="../img/login_icon.png" alt="..."
+                                                     class="profile-img">${result.firstname} ${result.lastname}</a>
+
+                                             <a href="#" onclick="addToChats(${result.id})"><span
+                                                     class="badge"><i class="far fa-comment-alt"></i>
+                                                 </span></a>
+                                             <a href=""><span class="badge"> <i class="fas fa-trash"></i> </span></a>
+                                         </li>`)
+
+                                    })
+                            })
+                        }
+                    })
+
+
                 $(".chats").click(function (e) {
                     e.preventDefault();
 
@@ -216,6 +248,51 @@
                     $(".modal").modal('show')
                 }
             })
+        }
+
+        function sendChatData(data) {
+            $.ajax({
+                    method: "POST",
+                    url: "http://localhost:3000/chats",
+                    data: data
+                })
+                .done(function () {
+                    console.log('aii')
+                })
+        }
+
+        function addToChats(id) {
+            $.ajax({
+                    method: 'GET',
+                    url: 'http://localhost:3000/users/' + id,
+                })
+                .done(function (data) {
+                    let chatData = {
+                        userId: userDetails.id,
+                        chatId: id,
+                        name: data.firstname + ' ' + data.lastname,
+                        location: data.state + ', ' + data.city,
+                        age: data.age
+                    }
+                    console.log(chatData)
+                    $.ajax({
+                            method: "GET",
+                            url: `http://localhost:3000/chats?userId=${userDetails.id}&chatId=${id}`,
+                        })
+                        .done(function (res) {
+                            if (res.length <= 0) {
+                                $.ajax({
+                                        method: "GET",
+                                        url: `http://localhost:3000/chats?chatId=${userDetails.id}`
+                                    })
+                                    .done(function (result) {
+                                        if (result.length <= 0) {
+                                            sendChatData(chatData)
+                                        }
+                                    })
+                            }
+                        })
+                })
         }
         $("#closeModal").click((e) => {
             e.preventDefault();
